No more read from file on torrent framework. Moved from URL to URI.